Started on making figures for momentum comparing measurements with modelled concentrations

--- a/vignettes/CaseStudies/MOMENTUM2/Measurement_preparation.Rmd
+++ b/vignettes/CaseStudies/MOMENTUM2/Measurement_preparation.Rmd
@@ -119,3 +119,32 @@ KWR_data <- bind_rows(KWR_location_concentrations_data, KWR_location_concentrati
   mutate(lower_detection_limit_um = 10) |>
   mutate(upper_detection_limit_um = 5000)
 ```
+
+# MoreMomentum
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
